Fix select-control component label value alignment css style (https://github.com/woocommerce/woocommerce-admin/pull/8045)
* Fix(select-control): fix label value alignment

Add padding to input value to have same algin space with input label.

fixed issue 7786

* Add changelogs

Fix changelog entry

Add changelogs

--- a/plugins/woocommerce-admin/packages/components/src/select-control/style.scss
+++ b/plugins/woocommerce-admin/packages/components/src/select-control/style.scss
@@ -152,5 +152,9 @@
 			font-size: 12px;
 			margin-top: -$gap-small;
 		}
+
+		.woocommerce-select-control__control-input {
+			padding-left: 12px;
+		}
 	}
 }
